add multi dex pair monitor
